derive/test/compile_fail/invalid_attr_tuple_field_partially_labeled.rs
#[macro_use]
extern crate sval_derive;

#[derive(Value)]
pub struct Record (
    #[sval(label = "foo")]
    i32,
    i32,
);

fn main() {}
